examples/kitchen-sink/app/errors/client-error/page.tsx
'use client';

export default function RenderErrorPage() {
  throw new Error('Foo!');
}
